2007-12-12  Marek Habersack  <mhabersack@novell.com>

	* SettingsMappingManager.cs: use the 'settings.map.config' name
	for the application-specific mapper configuration. This ensures
	that the file won't be downloadable on systems which don't support
	the mapping feature without the need to add the extra handler
	entry to the app's Web.config file. Thanks to Joe Audette for the
	idea.

2007-12-11  Marek Habersack  <mhabersack@novell.com>

	* SettingsMappingManager.cs: made the class public - it is
	required for user-defined mappers to work.
	Added a new property, Platform, which specifies the platform we're
	running on. Platform check is now done only on initialization
	time.
	LoadMappings considers only the mappings which apply to the
	current platform. Other entries are not loaded.

	* SettingsMapping.cs: made the class public.
	
	* SettingsMappingWhat.cs: made the class public.

	* ISectionSettingsMapper.cs: made the interface public.
	
2007-12-08  Marek Habersack  <mhabersack@novell.com>

	* SerializationHelper.cs: added - serialization helper for the
	Sqlite Profile Provider.

	* RoleManagerSectionMapper.cs: added - section settings mapper for
	the RoleManager section.

	* MembershipSectionMapper.cs: added - section settings mapper for
	the Membership section.

	* ISectionSettingsMapper.cs: added - interface definition for
	section settings mappers.

	* SettingsMappingWhat.cs: added - describes a single 'what' tag
	instance inside the mapper definition in the settings.map file.

	* SettingsMapping.cs: added - represents a single mapper entry in
	the settings.map file.

	* SettingsMappingManager.cs: added - manages settings mapping as
	defined in the settings.map file.

2006-08-19  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* UrlUtils.cs: optimized string.Replace in RemoveDoubleSlashes

2007-03-21  Konstantin Triger <kostat@mainsoft.com>

	AltSerialization.cs: refactoring for Serialize/Deserialize functionality.
