@@ -1,3 +1,7 @@
+2008-06-16  Noam Lampert  <noaml@mainsoft.com>
+
+	* UrlUtils.cs: Fixed some bugs in Canonize method. Add several tests
+
 2007-12-12  Marek Habersack  <mhabersack@novell.com>
 
 	* SettingsMappingManager.cs: use the 'settings.map.config' name
